working on save and get settings

--- a/Website/package.json
+++ b/Website/package.json
@@ -14,9 +14,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-time-picker": "^7.0.0",
-    "react-toastify": "^10.0.5"
+    "react-hot-toast": "^2.4.1"
   },
   "engines": {
     "node": ">=18"
