Finish Workers and Api

--- a/Workers/LibriGenie.Workers/appsettings.json
+++ b/Workers/LibriGenie.Workers/appsettings.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "OllamaSettings": {
+    "OllamaEndpoint": "",
+    "Model": ""
+  },
+  "ApiConfiguration": {
+    "Endpoint": "",
+    "Username": "",
+    "Password": ""
+  },
+  "NewUrl": "",
+  "MailSettings": {
+    "BrevoApiKey": "",
+    "NoReplyEmail": ""
   }
 }
