--- a/Api/LibriGenie.Api/appsettings.json
+++ b/Api/LibriGenie.Api/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "MongoDBConfig": {
-    "ConnectionString": "mongodb://localhost:27017/",
-    "DatabaseName": "LibriGenie"
+    "ConnectionString": "",
+    "DatabaseName": ""
   },
   "BasicAuthentication": {
-    "Username": "admin",
-    "Password": "Z3hu9haIA72fm9weaUrM"
+    "Username": "",
+    "Password": ""
   }
 }
