--- a/Workers/LibriGenie.Workers/LibriGenie.Workers.csproj
+++ b/Workers/LibriGenie.Workers/LibriGenie.Workers.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="brevo_csharp" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="OllamaClient" Version="1.0.0" />
   </ItemGroup>
