--- a/Website/package.json
+++ b/Website/package.json
@@ -14,7 +14,8 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-js-cron": "^2.0.1"
   },
   "engines": {
     "node": ">=18"
